[Hotspot] Integrate Unsafe backend and update test excludes (2/2)
Refactor the Unsafe implementation in CVM to use JDK 17 Unsafe as the
underlying delegate while providing a JDK 8-compatible Unsafe interface.

This approach allows CVM to leverage the JDK 17 Unsafe implementation
while maintaining compatibility with existing JDK 8 Unsafe APIs.

This change also resolves C2 escape analysis issues related to Unsafe
operations, including the TestUnsafePutAddressNullObjMustNotEscape test case.

Issue: #57